--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<script src="./bundle.js"></script>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <title></title>
+
+</head>
+<body>
+  <button id="novotodo">Adicionar</button>
+
+
+
+  <script src="./bundle.js"></script>
+</body>
+</html>
